[project]
name = "llm-zoomcamp-2026-evals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "minsearch>=0.1.0",
    "openai>=2.38.0",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "tqdm>=4.67.3",
]
