[project]
name = "llm-zoomcamp-2026-monitoring"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "minsearch>=0.1.0",
    "openai>=2.40.0",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
]
